2003-08-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/gettext.py: Remove.  We already require python 2.1, which
	includes gettext.py.

	* configure.in: Require python 2.1, as INSTALL.texi says.
	it.

	* Documentation/topdocs/INSTALL.texi: Add note to avoid bison
	versions 1.50 and 1.75.  Remove note about lexer patch.

2003-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Update type1 font
	description to actual situation.  Add comment about new font ball
	layout.

	* GNUmakefile.in (pfa-fonts): Create font-ball so that untar
	in $LILYPONDPREFIX suffices for installation.

2003-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/control (Build-Depends): Add flex-old as alternative to
	flex.  Deprecate bison 1.75.

2003-08-17  Juergen Reuter  <reuter@ipd.uka.de>

	* lilypond.words, ly/engraver-init.ly, ly/params-init.ly: added
	Vaticana contexts

	* Documentation/user/refman.itely (Ancient notation): documented
	some bugs; tiny fixes; added docu on Vaticana contexts

	* gregorian-init.ly, ly/script-init.ly: moved ancient articulation
	scripts

2003-08-16  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely (Ancient notation): added some
	introductory words; added section on ancient time signatures;
	added some @seealso and @refcommands; small fixes and
	beautifications

2003-08-15  Juergen Reuter  <reuter@ipd.uka.de>

	* input/regression/note-head-style.ly: many fixes and updates

	* Documentation/user/refman.itely: added small sections on ancient
	accidentals, rests and flags; revised ancient note head section;
	small wording/spelling fixes

	* input/test/rests.ly: layout fixes

2003-08-14  Juergen Reuter  <reuter@ipd.uka.de>

	* input/puer-fragment.ly: bugfix: central C position of do clef

	* ly/gregorian-init.ly: workaround: add small padding space before
	divisiones (the correct fix would be the spacing engine to handle
	this)

2003-08-13  Graham Percival  <gperlist@shaw.ca>
